build and push docker image to dockerHub