@@ -5,18 +5,30 @@
     <parent>
         <groupId>person.yx</groupId>
         <artifactId>dragon</artifactId>
-        <version>0.0.1</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>1.0.1</version>
     </parent>
+
     <groupId>person.yx.dragon</groupId>
     <artifactId>dragon-show</artifactId>
-    <version>0.0.1</version>
+    <version>1.0.1</version>
     <name>dragon-show</name>
     <description>a show service for dragon</description>
     <packaging>jar</packaging>
 
     <properties>
         <java.version>11</java.version>
+        <application.runas>show</application.runas>
+        <docker.image.prefix>yuexing14</docker.image.prefix>
+        <docker.image.baseon>adoptopenjdk/openjdk11
+        </docker.image.baseon>
+        <docker.image.java.options>
+            "-XX:+UseContainerSupport","-XX:InitialRAMPercentage=25","-XX:MaxRAMPercentage=90","-XX:+UnlockExperimentalVMOptions","-XX:+UseZGC"
+        </docker.image.java.options>
+        <docker.image.suffix>-dev</docker.image.suffix>
+        <docker.image.java.parameters>"--spring.profiles.active=common,docker"</docker.image.java.parameters>
+
+        <docker-maven-plugin.version>1.2.2</docker-maven-plugin.version>
+        <appassembler-maven-plugin.version>2.1.0</appassembler-maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -82,17 +94,120 @@
 
     <profiles>
         <profile>
-            <id>normal</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
+            <id>docker</id>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-maven-plugin</artifactId>
                     </plugin>
+                    <plugin>
+                        <groupId>com.spotify</groupId>
+                        <artifactId>docker-maven-plugin</artifactId>
+                        <version>${docker-maven-plugin.version}</version>
+                    </plugin>
                 </plugins>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>com.spotify</groupId>
+                            <artifactId>docker-maven-plugin</artifactId>
+                            <version>${docker-maven-plugin.version}</version>
+                            <configuration>
+                                <imageName>
+                                    ${docker.image.prefix}/${project.artifactId}${docker.image.suffix}:${project.version}
+                                </imageName>
+                                <baseImage>${docker.image.baseon}</baseImage>
+                                <entryPoint>
+                                    ["java",${docker.image.java.options},"-jar","/opt/${project.groupId}/${project.artifactId}/${project.version}/${project.build.finalName}.jar",${docker.image.java.parameters}]
+                                </entryPoint>
+                                <resources>
+                                    <resource>
+                                        <targetPath>/opt/${project.groupId}/${project.artifactId}/${project.version}/
+                                        </targetPath>
+                                        <directory>${project.build.directory}</directory>
+                                        <include>${project.build.finalName}.jar</include>
+                                    </resource>
+                                </resources>
+                                <forceTags>true</forceTags>
+                                <imageTags>
+                                    <imageTag>${project.version}</imageTag>
+                                    <imageTag>latest</imageTag>
+                                </imageTags>
+                                <exposes>
+                                    <expose>80</expose>
+                                </exposes>
+                                <!-- 以下两行是为了docker push到DockerHub使用的。 -->
+                                <serverId>docker-hub</serverId>
+<!--                                <registryUrl>https://reg.dockerhub.upenny.cn/</registryUrl>-->
+                            </configuration>
+                            <executions>
+                                <execution>
+                                    <id>build-image</id>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <goal>build</goal>
+                                    </goals>
+                                    <configuration>
+                                        <pullOnBuild>true</pullOnBuild>
+                                    </configuration>
+                                </execution>
+                                <execution>
+                                    <id>tag-image-version</id>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <goal>tag</goal>
+                                    </goals>
+                                    <configuration>
+                                        <image>${docker.image.prefix}/${project.artifactId}${docker.image.suffix}
+                                        </image>
+                                        <newName>
+                                            ${docker.image.prefix}/${project.artifactId}${docker.image.suffix}:${project.version}
+                                        </newName>
+                                    </configuration>
+                                </execution>
+                                <execution>
+                                    <id>tag-image-latest</id>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <goal>tag</goal>
+                                    </goals>
+                                    <configuration>
+                                        <image>${docker.image.prefix}/${project.artifactId}${docker.image.suffix}
+                                        </image>
+                                        <newName>
+                                            ${docker.image.prefix}/${project.artifactId}${docker.image.suffix}:latest
+                                        </newName>
+                                    </configuration>
+                                </execution>
+                                <execution>
+                                    <id>push-image-version</id>
+                                    <phase>install</phase>
+                                    <goals>
+                                        <goal>push</goal>
+                                    </goals>
+                                    <configuration>
+                                        <imageName>
+                                            ${docker.image.prefix}/${project.artifactId}${docker.image.suffix}:${project.version}
+                                        </imageName>
+                                    </configuration>
+                                </execution>
+                                <execution>
+                                    <id>push-image-latest</id>
+                                    <phase>install</phase>
+                                    <goals>
+                                        <goal>push</goal>
+                                    </goals>
+                                    <configuration>
+                                        <imageName>
+                                            ${docker.image.prefix}/${project.artifactId}${docker.image.suffix}:latest
+                                        </imageName>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
             </build>
         </profile>
 
